fixing missing border in qr block (in the proper css file!)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -531,7 +531,11 @@ h1 a, h2 a, h3 a, h4 a {
 }
 
 
-.sponsor, .powered, .copyright, .share {
+.sponsor,
+.powered,
+.copyright,
+.qr_block, 
+.share {
   border-bottom: 2px solid black;
 }
 
